--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
             justify-content: center;
             align-items: flex-end;
             overflow: hidden;
+            background: rgba(0, 0, 0, 0.1); /* Adiciona fundo para melhor visualização */
+            border: 1px solid #ccc;
+            border-radius: 5px;
         }
         .silo-img {
             width: 100%;
@@ -103,7 +106,7 @@
         }
         .silo-fill {
             position: absolute;
-            bottom: 17%;
+            bottom: 0; /* Ajustado para preencher corretamente */
             width: 100%;
             max-height: 66%;
             height: 0;
@@ -167,4 +170,3 @@
     </script>
 </body>
 </html>
-
