--- a/index.html
+++ b/index.html
@@ -3,170 +3,183 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <title>Dashboard com Sidebar</title>
     <style>
-        body {
-            display: flex;
-            margin: 0;
-            font-family: Arial, sans-serif;
-        }
+        /* Estilos da Sidebar */
         .sidebar {
-            width: 250px;
-            background-color: #3b5998;
-            color: white;
-            height: 100vh;
-            transition: width 0.3s;
-            overflow: hidden;
+            height: 100%;
+            width: 60px;
             position: fixed;
-            left: 0;
+            z-index: 1000;
             top: 0;
+            left: 0;
+            background-color: #3b5998;
+            overflow-x: hidden;
+            transition: 0.3s;
             padding-top: 20px;
         }
-        .sidebar.collapsed {
-            width: 80px;
+
+        .sidebar.expanded {
+            width: 250px;
         }
-        .sidebar ul {
-            list-style: none;
-            padding: 0;
-        }
-        .sidebar ul li {
-            padding: 15px;
+
+        .sidebar a {
+            padding: 10px 15px;
+            text-decoration: none;
+            font-size: 18px;
+            color: white;
             display: flex;
             align-items: center;
-            cursor: pointer;
-            transition: background 0.3s;
+            transition: 0.3s;
         }
-        .sidebar ul li:hover {
-            background: #2d4373;
+
+        .sidebar a:hover {
+            background-color: #2a4373;
         }
-        .sidebar ul li i {
+
+        .sidebar .icon {
+            min-width: 30px;
             margin-right: 10px;
+            text-align: center;
         }
+
+        .sidebar .menu-text {
+            display: none;
+            opacity: 0;
+            transition: opacity 0.2s;
+        }
+
+        .sidebar.expanded .menu-text {
+            display: inline;
+            opacity: 1;
+        }
+
         .content {
-            margin-left: 250px;
+            margin-left: 60px;
             padding: 20px;
-            flex-grow: 1;
             transition: margin-left 0.3s;
         }
-        .collapsed + .content {
-            margin-left: 80px;
+
+        .content.expanded {
+            margin-left: 250px;
         }
+
         .toggle-btn {
-            position: absolute;
-            top: 10px;
-            left: 260px;
-            background: #3b5998;
+            position: fixed;
+            left: 70px;
+            top: 20px;
+            z-index: 1100;
+            background-color: #3b5998;
             color: white;
             border: none;
-            cursor: pointer;
-            padding: 10px;
-            border-radius: 5px;
-            transition: left 0.3s;
-        }
-        .collapsed + .content .toggle-btn {
-            left: 90px;
-        }
-        .silos-peso-container {
-            display: flex;
-            align-items: center;
-            gap: 20px;
-            width: 100%;
-            justify-content: space-between;
-        }
-        .silos {
-            display: flex;
-            gap: 20px;
-            width: 70%;
-        }
-        .peso-silos {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 2px;
-            font-size: 14px;
-        }
-        .silo-container {
-            position: relative;
-            width: 80px;
-            height: 200px;
-            display: flex;
-            justify-content: center;
-            align-items: flex-end;
-            overflow: hidden;
-            background: rgba(0, 0, 0, 0.1); /* Adiciona fundo para melhor visualização */
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        .silo-img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-            position: absolute;
-            z-index: 2;
-        }
-        .silo-fill {
-            position: absolute;
-            bottom: 0; /* Ajustado para preencher corretamente */
-            width: 100%;
-            max-height: 66%;
-            height: 0;
-            background-color: green;
-            opacity: 0.6;
-            transition: height 0.5s ease-in-out, background-color 0.5s;
-            z-index: 1;
-        }
-        .silo-percentage {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: white;
             padding: 5px 10px;
-            border-radius: 5px;
-            border: 1px solid black;
-            font-weight: bold;
-            color: black;
-            z-index: 3;
+            cursor: pointer;
+            border-radius: 3px;
         }
+
+        /* Seus estilos existentes */
+        .card-body {
+            min-height: 150px;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            width: 100%;
+        }
+
+        /* ... (seus outros estilos permanecem iguais) ... */
     </style>
 </head>
 <body>
+    <!-- Sidebar -->
     <div class="sidebar" id="sidebar">
-        <ul>
-            <li><i class="fas fa-tachometer-alt"></i> <span>Dashboard</span></li>
-            <li><i class="fas fa-chart-bar"></i> <span>Gráficos</span></li>
-            <li><i class="fas fa-sign-out-alt"></i> <span>Sair</span></li>
-        </ul>
+        <a href="#dashboard">
+            <span class="icon">🏠</span>
+            <span class="menu-text">Dashboard</span>
+        </a>
+        <a href="#graficos">
+            <span class="icon">📊</span>
+            <span class="menu-text">Gráficos</span>
+        </a>
+        <a href="#sair">
+            <span class="icon">🚪</span>
+            <span class="menu-text">Sair</span>
+        </a>
     </div>
-    <div class="content">
-        <button class="toggle-btn" onclick="toggleSidebar()">☰</button>
-        <h1>Dashboard</h1>
-        <div class="silos-peso-container">
-            <div class="silos">
-                <div class="silo-container" data-percent="90">
-                    <div class="silo-fill"></div>
-                    <img src="/assets/Ativo_1_4x.png" alt="Imagem" class="silo-img">
-                    <div class="silo-percentage">90%</div>
+
+    <!-- Botão de toggle -->
+    <button class="toggle-btn" onclick="toggleSidebar()">☰</button>
+
+    <!-- Conteúdo principal -->
+    <div class="content" id="content">
+        <div class="d-sm-flex align-items-center justify-content-between mb-4">
+            <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+        </div>
+
+        <div class="row">
+            <div class="col-xl-3 col-md-6 mb-4">
+                <div class="card border-left-primary shadow h-100 py-2">
+                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1;">
+                        Aviário 01 - Jéssica De Ré - Matricula: 112939
+                    </div>
+                    <div class="card-body">
+                        <div class="row no-gutters align-items-center">
+                            <div class="col mr-2"></div>
+                            <div class="silos-peso-container">
+                                <div class="silos">
+                                    <div class="silo-container" data-percent="90">
+                                        <div class="silo-fill"></div>
+                                        <img src="/assets/Ativo_1_4x.png" alt="Imagem" class="silo-img">
+                                        <div class="silo-percentage">90%</div>
+                                    </div>
+                                    <div class="silo-container" data-percent="30">
+                                        <div class="silo-fill"></div>
+                                        <img src="/assets/Ativo_1_4x.png" alt="Imagem" class="silo-img">
+                                        <div class="silo-percentage">30%</div>
+                                    </div>
+                                </div>
+                                <div class="peso-silos">
+                                    <div class="font-weight-bold">PESO SILO 01:</div> 
+                                    <div>500 kg</div>
+                                    <div class="font-weight-bold mt-2">PESO SILO 02:</div>
+                                    <div>450 kg</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="silo-container" data-percent="30">
-                    <div class="silo-fill"></div>
-                    <img src="/assets/Ativo_1_4x.png" alt="Imagem" class="silo-img">
-                    <div class="silo-percentage">30%</div>
-                </div>
-            </div>
-            <div class="peso-silos">
-                <div class="font-weight-bold">PESO SILO 01:</div> 
-                <div>500 kg</div>
-                <div class="font-weight-bold mt-2">PESO SILO 02:</div>
-                <div>450 kg</div>
             </div>
         </div>
     </div>
+
     <script>
+        // Função para expandir/retrair a sidebar
         function toggleSidebar() {
             const sidebar = document.getElementById('sidebar');
-            sidebar.classList.toggle('collapsed');
+            const content = document.getElementById('content');
+            sidebar.classList.toggle('expanded');
+            content.classList.toggle('expanded');
         }
+
+        // Seu script existente para os silos
+        function updateSilos() {
+            document.querySelectorAll('.silo-container').forEach(silo => {
+                let percent = parseInt(silo.getAttribute('data-percent'));
+                let fill = silo.querySelector('.silo-fill');
+                let maxFillHeight = 66;
+                fill.style.height = (percent / 100) * maxFillHeight + "%";
+                
+                if (percent <= 30) {
+                    fill.style.backgroundColor = "red";
+                } else if (percent <= 70) {
+                    fill.style.backgroundColor = "yellow";
+                } else {
+                    fill.style.backgroundColor = "green";
+                }
+            });
+        }
+
+        document.addEventListener("DOMContentLoaded", updateSilos);
     </script>
 </body>
 </html>
