--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             border-radius: 3px;
         }
 
-        /* Seus estilos existentes */
+        /* Estilos dos Silos */
         .card-body {
             min-height: 150px;
             padding: 20px;
@@ -87,7 +87,70 @@
             width: 100%;
         }
 
-        /* ... (seus outros estilos permanecem iguais) ... */
+        .silos-peso-container {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            width: 100%;
+            justify-content: space-between;
+        }
+
+        .silos {
+            display: flex;
+            gap: 20px;
+            width: 70%;
+        }
+
+        .peso-silos {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 2px;
+            font-size: 14px;
+        }
+
+        .silo-container {
+            position: relative;
+            width: 80px;
+            height: 200px;
+            display: flex;
+            justify-content: center;
+            align-items: flex-end;
+            overflow: hidden;
+        }
+
+        .silo-img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+            position: absolute;
+            z-index: 2;
+        }
+
+        .silo-fill {
+            position: absolute;
+            bottom: 17%;
+            width: 100%;
+            max-height: 66%;
+            height: 0;
+            background-color: green; /* Cor padrão inicial */
+            opacity: 0.6;
+            transition: height 0.5s ease-in-out, background-color 0.5s ease-in-out;
+            z-index: 1;
+        }
+
+        .silo-percentage {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: white;
+            padding: 5px 10px;
+            border-radius: 5px;
+            border: 1px solid black;
+            font-weight: bold;
+            color: black;
+            z-index: 3;
+        }
     </style>
 </head>
 <body>
@@ -161,24 +224,29 @@
             content.classList.toggle('expanded');
         }
 
-        // Seu script existente para os silos
+        // Função para atualizar os silos
         function updateSilos() {
             document.querySelectorAll('.silo-container').forEach(silo => {
-                let percent = parseInt(silo.getAttribute('data-percent'));
-                let fill = silo.querySelector('.silo-fill');
-                let maxFillHeight = 66;
-                fill.style.height = (percent / 100) * maxFillHeight + "%";
+                const percent = parseInt(silo.getAttribute('data-percent'));
+                const fill = silo.querySelector('.silo-fill');
                 
+                // Define a altura máxima como porcentagem do container
+                const maxFillHeight = 66; // 66% da altura máxima
+                const fillHeight = (percent / 100) * maxFillHeight;
+                fill.style.height = `${fillHeight}%`;
+
+                // Aplica as cores com base no percentual
                 if (percent <= 30) {
-                    fill.style.backgroundColor = "red";
+                    fill.style.backgroundColor = 'red';
                 } else if (percent <= 70) {
-                    fill.style.backgroundColor = "yellow";
+                    fill.style.backgroundColor = 'yellow';
                 } else {
-                    fill.style.backgroundColor = "green";
+                    fill.style.backgroundColor = 'green';
                 }
             });
         }
 
+        // Chama a função ao carregar a página
         document.addEventListener("DOMContentLoaded", updateSilos);
     </script>
 </body>
