--- a/index.html
+++ b/index.html
@@ -64,17 +64,25 @@
             margin-left: 250px;
         }
 
+        /* Estilo melhorado do botão de toggle */
         .toggle-btn {
             position: fixed;
-            left: 70px;
-            top: 20px;
+            left: 10px; /* Ajuste para ficar mais próximo da borda esquerda */
+            top: 10px; /* Ajuste para posicionamento mais natural */
             z-index: 1100;
             background-color: #3b5998;
             color: white;
             border: none;
-            padding: 5px 10px;
+            padding: 8px 12px; /* Aumentei o padding para melhor clique */
             cursor: pointer;
-            border-radius: 3px;
+            border-radius: 4px; /* Borda mais suave */
+            font-size: 16px; /* Tamanho de fonte ajustado */
+            transition: transform 0.3s; /* Adiciona animação ao clicar */
+        }
+
+        .toggle-btn:hover {
+            background-color: #2a4373; /* Mesma cor hover da sidebar */
+            transform: scale(1.1); /* Efeito de zoom ligeiro ao passar o mouse */
         }
 
         /* Estilos dos Silos */
@@ -132,7 +140,7 @@
             width: 100%;
             max-height: 66%;
             height: 0;
-            background-color: green; /* Cor padrão inicial */
+            background-color: green;
             opacity: 0.6;
             transition: height 0.5s ease-in-out, background-color 0.5s ease-in-out;
             z-index: 1;
@@ -170,8 +178,8 @@
         </a>
     </div>
 
-    <!-- Botão de toggle -->
-    <button class="toggle-btn" onclick="toggleSidebar()">☰</button>
+    <!-- Botão de toggle atualizado com ícone de seta -->
+    <button class="toggle-btn" onclick="toggleSidebar()">❯</button>
 
     <!-- Conteúdo principal -->
     <div class="content" id="content">
@@ -220,8 +228,17 @@
         function toggleSidebar() {
             const sidebar = document.getElementById('sidebar');
             const content = document.getElementById('content');
+            const toggleBtn = document.querySelector('.toggle-btn');
+            
             sidebar.classList.toggle('expanded');
             content.classList.toggle('expanded');
+
+            // Atualiza o ícone do botão para indicar a direção (seta para a direita ou esquerda)
+            if (sidebar.classList.contains('expanded')) {
+                toggleBtn.textContent = '❮'; // Seta para a esquerda (recolher)
+            } else {
+                toggleBtn.textContent = '❯'; // Seta para a direita (expandir)
+            }
         }
 
         // Função para atualizar os silos
@@ -230,12 +247,10 @@
                 const percent = parseInt(silo.getAttribute('data-percent'));
                 const fill = silo.querySelector('.silo-fill');
                 
-                // Define a altura máxima como porcentagem do container
-                const maxFillHeight = 66; // 66% da altura máxima
+                const maxFillHeight = 66;
                 const fillHeight = (percent / 100) * maxFillHeight;
                 fill.style.height = `${fillHeight}%`;
 
-                // Aplica as cores com base no percentual
                 if (percent <= 30) {
                     fill.style.backgroundColor = 'red';
                 } else if (percent <= 70) {
