--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
         }
 
         .silo-frame {
-            border: 2px solid #3b5998; /* Moldura azul (mesma cor da sidebar) */
-            padding: 15px; /* Espaço interno para melhor visualização */
-            border-radius: 8px; /* Bordas arredondadas para um visual moderno */
-            background-color: #f8f9fa; /* Fundo leve para contraste */
+            border: 2px solid #a2cffe; /* Cor azul clara da borda, como na imagem */
+            padding: 10px; /* Espaço interno reduzido para se alinhar com a imagem */
+            border-radius: 0; /* Removendo bordas arredondadas para se alinhar com a imagem */
+            background-color: white; /* Fundo branco, como na imagem */
             display: flex;
             align-items: center;
-            gap: 20px;
+            gap: 20px; /* Mantendo o espaçamento entre silos e pesos */
             width: 100%;
             justify-content: space-between;
         }
@@ -110,15 +110,17 @@
         .silos {
             display: flex;
             gap: 20px;
-            width: 70%;
+            width: auto; /* Removendo largura fixa para se ajustar dinamicamente */
         }
 
         .peso-silos {
             display: flex;
-            flex-wrap: wrap;
-            gap: 2px;
+            flex-direction: column; /* Alterado para colunas, como na imagem */
+            gap: 5px; /* Espaçamento menor entre as linhas de peso */
             font-size: 14px;
-            width: 30%; /* Ajuste para melhor distribuição dentro da moldura */
+            width: auto; /* Removendo largura fixa para se ajustar dinamicamente */
+            color: #333; /* Cor do texto mais escura, como na imagem */
+            font-weight: normal; /* Remove negrito para se alinhar com a imagem */
         }
 
         .silo-container {
@@ -215,9 +217,9 @@
                                     </div>
                                 </div>
                                 <div class="peso-silos">
-                                    <div class="font-weight-bold">PESO SILO 01:</div> 
+                                    <div>PESO SILO 01:</div> 
                                     <div>500 kg</div>
-                                    <div class="font-weight-bold mt-2">PESO SILO 02:</div>
+                                    <div>PESO SILO 02:</div>
                                     <div>450 kg</div>
                                 </div>
                             </div>
