--- a/index.html
+++ b/index.html
@@ -101,27 +101,24 @@
             border-radius: 0; /* Mantendo bordas retas */
             background-color: white; /* Fundo branco, como na imagem */
             display: flex;
-            align-items: center;
-            gap: 10px; /* Reduzindo o espaço entre silos e pesos para 10px */
-            width: 100%;
-            justify-content: flex-start; /* Alinhando corretamente lado a lado */
+            flex-direction: column; /* Alterado para empilhar a frase acima dos silos */
+            gap: 5px; /* Pequeno espaço entre a frase e os silos */
+            width: auto; /* Ajustado para cobrir apenas o conteúdo necessário */
+            align-items: center; /* Centralizando horizontalmente */
+        }
+
+        .silo-header {
+            font-size: 12px; /* Reduzindo o tamanho da fonte da frase */
+            color: #333; /* Cor do texto mais escura, como na imagem */
+            font-weight: normal; /* Texto normal, sem negrito */
+            width: 100%; /* Ocupa toda a largura da moldura */
+            text-align: center; /* Centralizando o texto */
         }
 
         .silos {
             display: flex;
-            gap: 10px; /* Reduzindo o espaço entre os silos também */
-            width: auto; /* Mantendo ajustado dinamicamente */
-        }
-
-        .peso-silos {
-            display: flex;
-            flex-direction: column; /* Mantendo colunas verticais */
-            gap: 5px; /* Mantendo espaçamento menor entre as linhas de peso */
-            font-size: 14px;
-            width: auto; /* Mantendo ajustado dinamicamente */
-            color: #333; /* Cor do texto mais escura, como na imagem */
-            font-weight: normal; /* Texto normal, sem negrito */
-            margin-left: 10px; /* Adicionando margem esquerda para alinhamento fino */
+            gap: 10px; /* Mantendo o espaço reduzido entre os silos */
+            width: auto; /* Ajustado dinamicamente */
         }
 
         .silo-container {
@@ -167,6 +164,18 @@
             color: black;
             z-index: 3;
         }
+
+        /* Novo estilo para os pesos fora da moldura */
+        .peso-silos {
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+            font-size: 14px;
+            color: #333;
+            font-weight: normal;
+            margin-top: 10px; /* Espaço acima dos pesos */
+            width: auto;
+        }
     </style>
 </head>
 <body>
@@ -198,13 +207,11 @@
         <div class="row">
             <div class="col-xl-3 col-md-6 mb-4">
                 <div class="card border-left-primary shadow h-100 py-2">
-                    <div class="text-xs font-weight-bold text-primary text-uppercase mb-1;">
-                        Aviário 01 - Jéssica De Ré - Matricula: 112939
-                    </div>
                     <div class="card-body">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2"></div>
                             <div class="silo-frame">
+                                <div class="silo-header">Aviário 01 - Jéssica De Ré - Matricula: 112939</div>
                                 <div class="silos">
                                     <div class="silo-container" data-percent="90">
                                         <div class="silo-fill"></div>
@@ -217,12 +224,12 @@
                                         <div class="silo-percentage">30%</div>
                                     </div>
                                 </div>
-                                <div class="peso-silos">
-                                    <div>PESO SILO 01:</div> 
-                                    <div>500 kg</div>
-                                    <div>PESO SILO 02:</div>
-                                    <div>450 kg</div>
-                                </div>
+                            </div>
+                            <div class="peso-silos">
+                                <div>PESO SILO 01:</div> 
+                                <div>500 kg</div>
+                                <div>PESO SILO 02:</div>
+                                <div>450 kg</div>
                             </div>
                         </div>
                     </div>
