--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard com Sidebar</title>
+    <title>SmartSilo</title>
     <style>
         /* Estilos mantidos iguais ao código anterior */
         .sidebar {
