--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <meta property="og:url" content="https://nearautomacao.netlify.app" />
 <meta property="og:title" content="SmartSilo" />
 <meta property="og:description" content="O SmartSilo é uma solução completa para o gerenciamento de ração, que integra sensores de nível a laser com um software intuitivo. Monitorando automaticamente os níveis do silo e o consumo de ração, além de permitir o agendamento de entregas de forma prática. Tudo isso pode ser acessado a qualquer momento e de qualquer lugar." />
-<meta property="og:image" content="https://assets/smartsilotag.jpg" />
+<meta property="og:image" content="https://smartsilotag.jpg" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://nearautomacao.netlify.app" />
 <meta property="twitter:title" content="SmartSilo" />
 <meta property="twitter:description" content="O SmartSilo é uma solução completa para o gerenciamento de ração, que integra sensores de nível a laser com um software intuitivo. Monitorando automaticamente os níveis do silo e o consumo de ração, além de permitir o agendamento de entregas de forma prática. Tudo isso pode ser acessado a qualquer momento e de qualquer lugar." />
-<meta property="twitter:image" content="https://assets/smartsilotag.jpg" />
+<meta property="twitter:image" content="https://smartsilotag.jpg" />
 
 <!-- Meta Tags Generated with https://metatags.io -->
     
