--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,8 +13,10 @@
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://nearautomacao.netlify.app" />
 <meta property="og:title" content="SmartSilo" />
-<meta property="og:description" content="O SmartSilo é uma solução completa para o gerenciamento de ração, que integra sensores de nível a laser com um software intuitivo. 
-    Monitorando automaticamente os níveis do silo e o consumo de ração, além de permitir o agendamento de entregas de forma prática. Tudo isso pode ser acessado a qualquer momento e de qualquer lugar." />
+<meta property="og:description" content="O SmartSilo é uma solução completa para o gerenciamento de ração, que integra sensores de nível a laser com um software intuitivo.
+\nMonitorando automaticamente os níveis do silo e o consumo de ração,
+\nalém de permitir o agendamento de entregas de forma prática.
+\nTudo isso pode ser acessado a qualquer momento e de qualquer lugar." />
 <meta property="og:image" content="https://nearautomacao.netlify.app/assets/smartsilotag.jpg" />
 
 <!-- Twitter -->
